//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  username String [unique, not null]
  email String [unique, not null]
  displayName String [not null]
  password String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  frSender friend_request [not null]
  frReceiver friend_request [not null]
}

Table friend_request {
  id String [pk]
  senderId String [not null]
  receiverId String [not null]
  receiver user [not null]
  sender user [not null]
  accepted Boolean
  cancelled Boolean
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: friend_request.receiverId > user.id

Ref: friend_request.senderId > user.id